[package]
## crate 名
name = "step_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 这个库是从 https://crates.io/crates/rand 下载的。
# 实际上这个网址有一个索引cartes.in index，也就是注册表。cargo会将这个注册表下载下来。
# 更新注册表后，会检查[dependencies]中，那些库没下载，如果这个库有依赖的库，则也要下载下来。
# 当我们初次build这个项目的时候，会更新Cargo.lock文件，以后每次编译都会以这个文件为准
# 除非我们手动修改了包的版本。或者执行了cargo uodate命令。来升级包，会升级到0.3开头最新版本。但是Cargo.toml中的版本是不会变的。
# 如果我改成0.4.开头，则会升级到0.4开头最新版本。
rand = "0.3.14"