[package]
name = "ch10-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = {version= "0.11",features = ["json","blocking"]}
hyper = { version = "0.14.12", features = ["http1", "server", "tcp"] }