[package]
name = "ch4-tool-help"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
libc = "0.2"
# 现在最新是3版本，但是1版本用起来很简单。
crc = "1"
#[target.'cfg(not(windows))'.dependencies]
#libc = "0.2"

