[package]
name = "ch8-concurrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = "1"

[[bin]]
name = "native_async"
path = "bin/native_async.rs"

[[bin]]
name = "atomic"
path = "bin/atomic.rs"

[[bin]]
name = "condvar"
path = "bin/condvar.rs"

[[bin]]
name = "mpsc"
path = "bin/mpsc.rs"