[package]
name = "ch8-concurrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"

[[bin]]
name = "native_async"
path = "bin/features.rs"

[[bin]]
name = "atomic"
path = "bin/atomic.rs"

[[bin]]
name = "condvar"
path = "bin/condvar.rs"

[[bin]]
name = "tokio"
path = "bin/tokio.rs"