[package]
name = "ch8-concurrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3.25"

[[bin]]
name = "native_async"
path = "bin/futures.rs"

[[bin]]
name = "atomic"
path = "bin/atomic.rs"

[[bin]]
name = "condvar"
path = "bin/condvar.rs"

[[bin]]
name = "tokio_hello"
path = "bin/tokio_hello.rs"

[[bin]]
name = "tokio_task"
path = "bin/tokio_task.rs"