[package]
name = "ch8-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.42", features = "vendored" }
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }