[package]
name = "ch9-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0"
anyhow = "1.0"
futures = "0.3"
structopt = "0.3"
tokio = { version = "1.20.0", features = ["macros"]}
sqlx = { version = "0.6.2", features = [
    "sqlite", "runtime-tokio-native-tls"
]}

[[bin]]
name = "sqlite"
path = "bin/sqlite.rs"
