[package]
name = "ch7-storage"
version = "0.1.0"
edition = "2022"
authors = "wonkung@163.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc = "1.9.0"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/main.rs"