[package]
name = "advanced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4.17"
env_logger = "0.9"
tracing = "0.1"
sha256 = "1.0.3"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
# json
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
# orm
#diesel = { version = "<version>", features = ["<postgres|mysql|sqlite>"] }
diesel = { version = "2.0.0-rc.1", features = ["sqlite"] }
# sqlite
rusqlite = { version = "0.28.0", features = ["bundled"] }
[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"

